log
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:89:62: error: expected ‘;’ before ‘{’ token
   89 |         if (is_equal(tree, key, current->pair->key) == 1)NULL{
      |                                                              ^
Compilation failed
43966ae
 tests:  8|7
total_score: 5/70
43966ae
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:5: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   99 |     print(result->value);
      |     ^~~~~
      |     printf
cc1: all warnings being treated as errors
Compilation failed
43966ae
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:99:14: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
   99 |     printf("%d", result->value);
      |             ~^   ~~~~~~~~~~~~~
      |              |         |
      |              int       void *
      |             %p
cc1: all warnings being treated as errors
Compilation failed
43966ae
